hello-chris-ai-homelab/.k8s/minio/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: minio-console
  namespace: home-assistant
  labels:
    app.kubernetes.io/name: minio
spec:
  to:
    kind: Service
    name: minio
    weight: 100
  port:
    targetPort: console
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
